# xgent-ai-gateway

./: .dockerignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  gateway.toml
.claude/: gsd-file-manifest.json
.claude/agents/: gsd-debugger.md  gsd-executor.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-verifier.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.2-MILESTONE-AUDIT.md
.planning/debug/: admin-ui-service-detail-routing.md  agent-task-pickup-failure.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.2-REQUIREMENTS.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
admin-ui/: index.html  package-lock.json  package.json  vite.config.ts
admin-ui/src/: index.css  main.tsx  routeTree.gen.ts
docs/: DRAFT.md  LOCAL-DEPLOY.md
examples/async-api-service/: README.md  agent.yaml
examples/cli-service/: README.md  agent-arg.yaml  agent-stdin.yaml  echo.sh
examples/nodejs-client/: README.md  async-api-client.js  cli-client.js  package.json  sync-api-client.js  syntax-check.js
examples/sync-api-service/: README.md  agent.yaml
gateway/: Cargo.toml
gateway/examples/: sample_service.rs
gateway/src/: config.rs  error.rs  lib.rs  main.rs  metrics.rs  metrics_history.rs  state.rs  types.rs
gateway/src/agent/: async_api_executor.rs  cli_executor.rs  config.rs  executor.rs  http_common.rs  mod.rs  placeholder.rs  response.rs  sync_api_executor.rs
gateway/src/auth/: api_key.rs  mod.rs  node_token.rs
gateway/src/callback/: mod.rs
gateway/src/grpc/: auth.rs  mod.rs  poll.rs  submit.rs
gateway/src/http/: admin.rs  auth.rs  mod.rs  result.rs  submit.rs
gateway/src/queue/: mod.rs  redis.rs
gateway/src/reaper/: mod.rs
gateway/src/registry/: cleanup.rs  mod.rs  node_health.rs  service.rs
gateway/src/tls/: config.rs
gateway/tests/: auth_integration_test.rs  example_config_test.rs  grpc_auth_test.rs  integration_test.rs  reaper_callback_integration_test.rs  registry_integration_test.rs
proto/: Cargo.toml  build.rs
proto/src/: lib.rs  (+1 more)
(+350 files in other folders)
