[package]
name = "xgent-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
xgent-proto = { path = "../proto" }
tokio = { version = "1.50", features = ["full"] }
tonic = "0.14"
axum = "0.8"
redis = { version = "1.0", features = ["tokio-comp", "aio", "streams"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.22", features = ["v7"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6", features = ["derive"] }
config = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
tokio-stream = "0.1"
futures = "0.3"
base64 = "0.22"
