[package]
name = "xgent-gateway"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "xgent-gateway"
path = "src/main.rs"

[[bin]]
name = "xgent-agent"
path = "src/bin/agent.rs"

[dependencies]
xgent-proto = { path = "../proto" }
tokio = { version = "1.50", features = ["full"] }
tonic = { version = "0.14", features = ["tls-ring"] }
axum = "0.8"
redis = { version = "1.0", features = ["tokio-comp", "aio", "streams"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.22", features = ["v7"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6", features = ["derive", "env"] }
config = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
tokio-stream = "0.1"
futures = "0.3"
base64 = "0.22"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
tokio-rustls = "0.26"
rustls-pemfile = "2.2"
sha2 = "0.10"
rand = "0.9"
hex = "0.4"
hyper-util = { version = "0.1", features = ["tokio", "http2", "server-auto"] }
hyper = "1"

reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
prometheus = "0.14"
tracing-appender = "0.2"

[target.'cfg(target_env = "musl")'.dependencies]
tikv-jemallocator = "0.6"

[dev-dependencies]
tempfile = "3"
rcgen = "0.13"
toml = "0.8"
